# agentic-data-scraper

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_BACKUP_RULES.md  CLAUDE_COLLABORATION_MANIFEST.md  JUPYTER_SETUP.md  README.md  SETUP_NOTEBOOK.md  VSCODE_SETUP.md  agents  collectors  contracts  core  debug_collector_line_by_line.py  debug_exact_error.py  debug_exact_line.py  debug_usgs_api.py  demo_discovery.py  demo_semantic_model.py  deployment  docker-compose.semantic.yml  graph  launch_demo.py  notebook_reorganization_plan.md  ontologies  pipelines  pyproject.toml  run_demo.py  setup_jupyter.py  setup_vscode_jupyter.py  start_jupyter.sh  test_canvas.py  test_discovery_flow.py  test_environment.py  test_usgs_collector.py  ui  verify_uv_environment.py
.github/workflows/: ci.yml
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_client/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: agents.baml  navigation_agents.baml
data/: clean_test.db  kuzu_dbc.db  kuzu_dbc_1757997227_595135_76976.db  kuzu_dbc_1757999375_630007_88366.db  kuzu_dbc_1757999375_630007_88366.db.wal  semantic_analysis_results.json  semantic_summary.md
data/vocabulary_cache/: term_cache.json
docs/: CANVAS_IMPLEMENTATION.md  DEVELOPMENT_ROADMAP.md  DISCOVERY_IMPLEMENTATION.md  mississippi_river_data_architecture.md
docs/adr/: .gitkeep  ADR-001-project-structure-and-uv.md  ADR-002-docker-lambda-playwright.md  ADR-003-baml-agent-architecture.md  ADR-004-semantic-sow-data-contracts.md  ADR-005-spatio-temporal-sow-architecture.md  ADR-006-etkl-semantic-first-pattern.md  ADR-007-resolvable-semantic-uris.md  ADR-008-rich-spatial-context-integration.md  ADR-009-temporal-spatial-canvas-architecture.md  ADR-010-interactive-graph-visualization-yfiles.md  ADR-011-business-model-canvas-integration.md  ADR-012-data-business-canvas-ontological-foundation.md  ADR-012-ui-ux-mockups.md  ADR-013-intelligent-source-discovery-assistant.md  README.md  adr-template.md
docs/articles/: ETKL-MANIFESTO.md  README.md  week1-context-first-ai-era.md  week1-tariff-supply-chain-context-first.md
docs/articles/src/: ET(K)L: A Pragmatic Rethink of Data Architecture.md  From Data Pipelines to Knowledge-Driven Architecture: The “K” in ET(K)L.md
docs/examples/: simple_graph_showcase.html
docs/semantic/: SEMANTIC_INFRASTRUCTURE_SETUP.md
examples/: README.md  config.yaml  interactive_graph_demo.py  interactive_sow_in_action.py  maritime_routes_enhanced_demo.html  meaning_preserving_semantic_mapping.py  mississippi_river_soybean_crisis.html  panama_canal_impact_demo.html  playwright_navigation_demo.py  skos_semantic_translation_demo.py
notebook_navigation.kuzu/: catalog.kz  data.kz  metadata.kz  n-12.hindex  n-12.hindex.ovf  n-14.hindex  n-14.hindex.ovf
notebooks/: mississippi_river_etkl_workflow.ipynb
notebooks/semantic/: FORMATTING_ERROR_SOLUTION.md  comprehensive_semantic_db  euroenergy_ontology_compliant_testcase.py  euroenergy_semantic_test_case.py  fix_notebook_core.py  notebook_manager.py  quick_test.py  semantic_knowledge_graph_experiments.ipynb  semantic_knowledge_graph_experiments_CORRUPTED_2025-01-19-18-05.ipynb  semantic_knowledge_graph_experiments_FIXED.ipynb  semantic_knowledge_graph_experiments_backup_2025-01-19-17-30.ipynb  test_formatting_safety.py  test_sequential_execution.py  validate_notebook.py
notebooks/semantic/backups/: before_core_fixes_20250922_061220.ipynb  semantic_knowledge_graph_experiments_20250922_061049.ipynb  semantic_knowledge_graph_experiments_20250922_061229.ipynb
reports/taxonomy_validation/: validation_results_20250927_060028.json  validation_results_20250927_060044.json  validation_results_20250927_060109.json  validation_results_20250927_060146.json  validation_results_20250927_060157.json
schemas/: README.md
schemas/agents/baml_src/: agents.baml  discovery_agent.baml  discovery_agents.baml  etkl_guru_agent.baml  executive_target_scorer.baml  jupyter_storyteller.baml  semantic_test_case_generator.baml
schemas/agents/python/: __init__.py  sow.py
schemas/contracts/contexts/: finance_context.json  supply_chain_context.json
schemas/contracts/templates/: semantic_sow_schema.json  sow_schema.json
schemas/docs/: GIST_DBC_CONNECTED_GRAPH.md
schemas/sow/contexts/: commodities_context.json
schemas/sow/ontologies/: sow_inference_rules.owl
schemas/validation/: minimal_semantic_validation.ttl
scripts/: create_working_triple_store.sh  load_ontologies.sh  setup_production_triple_store.sh  test-all-submodules.sh  validate-integration.sh
src/agentic_data_scraper/: __init__.py
src/agentic_data_scraper/agents/: __init__.py  base.py  data_discovery.py  data_fetcher.py  data_parser.py  data_transformer.py  enhanced_discovery_agent.py  executive_target_scorer.py  security_decision.py  semantic_integrator.py  source_recommender.py  sow_interpreter.py  supervisor.py
src/agentic_data_scraper/aws/: __init__.py
src/agentic_data_scraper/business/: canvas_bridge.py
src/agentic_data_scraper/cli/: __init__.py  canvas_cli.py  main.py
src/agentic_data_scraper/collectors/: ais_collector.py  mock_data.py  usgs_collector.py
src/agentic_data_scraper/contracts/: semantic_sow_contract.py
src/agentic_data_scraper/core/: __init__.py  base_agent.py
src/agentic_data_scraper/discovery/: baml_discovery_service.py
src/agentic_data_scraper/elicitation/: __init__.py  inference_engine.py  (+1 more)
temp_notebook_semantic.kuzu/: catalog.kz
templates/: Dockerfile.lambda-base  Makefile  README.md  docker-compose.yml  lambda_function.py  requirements.txt
tests/: __init__.py  conftest.py
tests/unit/: test_core.py  test_schemas.py
tests/validation/: README.md  __init__.py  lambda_readiness_assessment.py  run_taxonomy_validation.py  skos_taxonomy_validation.py  sparql_navigation_examples.py  sparql_taxonomy_queries.py  test_ontology_navigation.py
web/: .gitignore  package-lock.json  package.json
(+45 files in other folders)
